--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@apollo/client": "^3.13.4",
     "@reduxjs/toolkit": "^2.6.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.5.0",
     "graphql": "^16.10.0",
     "next": "15.2.2",
     "react": "^19.0.0",
